# Document-Retrieval-System

./: README.md  main.py  pyproject.toml
src/state/: rag_state.py
src/vectorstore/: vectorestore.py
